--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test page</title>
+  <title>Pranav</title>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 <body>
 <h1>Pranav's Page</h1>
+  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="pranav-g-18245060"><a class="LI-simple-link" href='https://in.linkedin.com/in/pranav-g-18245060?trk=profile-badge'>Pranav G</a></div>
 </body>
 </html>
