--- a/classificationEvaluationMetrics.html
+++ b/classificationEvaluationMetrics.html
@@ -24,7 +24,7 @@
 						<div style="text-align: center;"><span>False Negatives</span></div>
 						<div style="text-align: center;"><span>(FN)</span></div>
 					</td>
-					<td style="width: 1000px; height: 100px;">
+					<td style="border-left: solid; border-top: solid; width: 1000px; height: 100px;">
 						<div style="text-align: center;"><span>True Negatives</span></div>
 						<div style="text-align: center;"><span>(TN)</span></div>
 					</td>
