--- a/classificationEvaluationMetrics.html
+++ b/classificationEvaluationMetrics.html
@@ -6,25 +6,25 @@
 	</head>
 	<body>
 		<div data-pm-slice="0 0 []" data-en-clipboard="true"><span>&nbsp;</span></div>
-		<table width="2000" style="border-style: none; width: 675px; margin-left: auto; margin-right: auto;" height="49">
+		<table style="border-style: none; margin-left: auto; margin-right: auto; height=200px; width:1000px">
 			<colgroup><col /><col /></colgroup>
 			<tbody>
-				<tr style="height: 75px;">
-					<td style="border-right: solid; border-bottom: solid; width: 1000px; height: 100px;">
+				<tr style="height: 100px;">
+					<td style="border-right: solid; border-bottom: solid; width: 1000px;">
 						<div style="text-align: center;"><span>True Positives</span></div>
 						<div style="text-align: center;"><span>(TP)</span></div>
 					</td>
-					<td style="border-left: solid; border-bottom: solid; width: 1000px; height: 100px;">
+					<td style="border-left: solid; border-bottom: solid; width: 1000px;">
 						<div style="text-align: center;"><span>False Positives</span></div>
 						<div style="text-align: center;"><span>(FP)</span></div>
 					</td>
 				</tr>
-				<tr style="height: 75px;">
-					<td style="border-right: solid; border-top: solid; width: 1000px; height: 100px;">
+				<tr style="height: 100px;">
+					<td style="border-right: solid; border-top: solid; width: 1000px;">
 						<div style="text-align: center;"><span>False Negatives</span></div>
 						<div style="text-align: center;"><span>(FN)</span></div>
 					</td>
-					<td style="border-left: solid; border-top: solid; width: 1000px; height: 100px;">
+					<td style="border-left: solid; border-top: solid; width: 1000px;">
 						<div style="text-align: center;"><span>True Negatives</span></div>
 						<div style="text-align: center;"><span>(TN)</span></div>
 					</td>
