--- a/classificationEvaluationMetrics.html
+++ b/classificationEvaluationMetrics.html
@@ -4,7 +4,7 @@
 			Evaluation metrics of classification model
 		</title>
 	</head>
-	<body style="font:Courier-New; font-size:18px">
+	<body style="font-family:Courier New; font-size:18px">
 		<div data-pm-slice="0 0 []" data-en-clipboard="true"><span>&nbsp;</span></div>
 		<table style="border-style: none; margin-left: auto; margin-right: auto; height=200px; width:1000px">
 			<colgroup><col /><col /></colgroup>
