--- a/classificationEvaluationMetrics.html
+++ b/classificationEvaluationMetrics.html
@@ -5,7 +5,10 @@
 		</title>
 	</head>
 	<body style="font-family:Courier New; font-size:18px">
-		<div data-pm-slice="0 0 []" data-en-clipboard="true"><span>&nbsp;</span></div>
+		<div>
+			<h1 style="text-align: center;">Evaluation Metrics of a Classification Model</h1>
+			<hr />
+		</div>
 		<table style="border-style: none; margin-left: auto; margin-right: auto; height=200px; width:1000px">
 			<colgroup><col /><col /></colgroup>
 			<tbody>
