--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1>Pranav's Notes</h1>
   <a href="classificationEvaluationMetrics.html">Evaluation metrics of a classification model</a>
+  <a href="jsNotes.html">Javascript notes</a>
 </body>
 </html>
