--- a/jsNotes.html
+++ b/jsNotes.html
@@ -7,7 +7,7 @@
 	<body style="font-family:Courier New; font-size:18px">
 		<h1 style="text-align: center;" data-pm-slice="0 0 []" data-en-clipboard="true">Javascript Notes</h1>
 		<hr />
-		<ul>
+		<ol>
 			<li><div>
 					<p> What is JavaScript?</p>
 					<p>
@@ -465,10 +465,10 @@
 					<p>How can a page be forced to load another page in JavaScript?</p>
 					<p>The following code has to be inserted to achieve the desired effect:</p>
 					<code>
-						<script language="JavaScript" type="text/javascript" ><!-- location.href="http://newhost/newpath/newfile.html"; //--></script>
+						&gt;script language="JavaScript" type="text/javascript" &lt;&gt;!-- location.href="http://newhost/newpath/newfile.html"; //--&lt;&gt;/script&lt;
 					</code>
 				</div>
 			</li>
-		</ul>
+		</ol>
 	</body>
 </html>
