--- a/jsNotes.html
+++ b/jsNotes.html
@@ -3,9 +3,21 @@
 		<title>
 			Javascript notes
 		</title>
+		<style>
+			body{
+				font-family:Courier New;
+				font-size:18px;
+			}
+			li > div > p:first:child{
+				color:red;
+			}
+			h1{
+				text-align: center;
+			}
+		</style>
 	</head>
-	<body style="font-family:Courier New; font-size:18px">
-		<h1 style="text-align: center;" data-pm-slice="0 0 []" data-en-clipboard="true">Javascript Notes</h1>
+	<body>
+		<h1>Javascript Notes</h1>
 		<hr />
 		<ol>
 			<li><div>
