--- a/jsNotes.html
+++ b/jsNotes.html
@@ -8,7 +8,7 @@
 				font-family:Courier New;
 				font-size:18px;
 			}
-			li > div > p:first:child{
+			li > div > p:first-child{
 				color:red;
 			}
 			h1{
