--- a/jQueryNotes.html
+++ b/jQueryNotes.html
@@ -79,6 +79,7 @@
 <hr>
 <h2><span style="font-size: 18px;"><span style="font-family: Courier New, courier;"><strong><span style="color:rgba(0, 0, 0, 0.87);">7.What is event.PreventDefault?</span></strong></span></span></h2>
 <p><span style="font-size: 18px;"><span style="font-family: Courier New, courier;"><span style="color:rgba(0, 0, 0, 0.87);">The&nbsp;</span><span style="color:rgb(232, 62, 140);">event.preventDefault()</span><span style="color:rgba(0, 0, 0, 0.87);">&nbsp;method stops the default action of an element from happening. For example, Prevents a link from following the URL.</span></span></span></p>
+		<img src="hoisting.png">
 <hr>
 <p><span style="font-size: 18px;"><span style="font-family: Courier New, courier;"><strong><span style="color:rgba(0, 0, 0, 0.87);">8.</span><span style="color:rgb(34, 34, 34);">What is the difference between jquery.size() and jquery.length?</span></strong></span></span></p>
 <p><span style="font-size: 18px;"><span style="font-family: Courier New, courier;"><span style="color:rgb(36, 39, 41);">jQuery .size() and .length both return the number of elements in the jQuery object.</span></span></span></p>
