--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <h1>Pranav's Notes</h1>
   <a href="classificationEvaluationMetrics.html">Evaluation metrics of a classification model</a>
   <a href="jsNotes.html">Javascript notes</a>
+  <a href="jQueryNotes.html">JQuery notes</a>
 </body>
 </html>
